sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value nbEchanges
    nbEchanges=0
    ^