sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var m = 0
  while(m<getNombreValeurs()) {
    var k = m
    nbEchanges=0
    for(i <- m to getNombreValeurs()-1) {
      if(plusPetit(i,k)) {
        k=i
      }
    }
    echange(m,k)
    m+=1
  }
}